appId: ${APP_ID}
---
- runFlow: ../subflows/navigation/navigate-to-transactions.flow.yaml

- tapOn:
      id: 'TransactionsPage.Tab.Recurring'

- extendedWaitUntil:
      visible:
          id: 'RecurringCalendar.Container'
      timeout: 15000

- tapOn:
      id: 'RecurringCalendar.Day.CurrentMonth.15'

- extendedWaitUntil:
      visible:
          id: '^RecurringCalendar[.]SelectedDayHeader[.].+$'
      timeout: 10000

- assertNotVisible:
      id: 'RecurringCalendar.SelectedDayEmptyState'

- waitForAnimationToEnd

- takeScreenshot: scene
