appId: ${APP_ID}
---
- runFlow:
      file: ../subflows/navigation/open-deep-link.flow.yaml
      env:
          DEEP_LINK: 'budgie://transactions/2110/transfer'

- extendedWaitUntil:
      visible:
          id: 'TransactionInfo.Row.Consolidation'
      timeout: 15000

- tapOn:
      id: 'TransactionInfo.Row.Consolidation'

- extendedWaitUntil:
      visible:
          id: 'ConsolidationSourceModal.Row.1'
      timeout: 10000

- waitForAnimationToEnd

- takeScreenshot: scene
