appId: ${APP_ID}
---
- runFlow: ../subflows/navigation/navigate-to-transactions.flow.yaml

- extendedWaitUntil:
      visible:
          id: 'UncategorizedTransactionsPill.Button'
      timeout: 15000

- tapOn:
      id: 'UncategorizedTransactionsPill.Button'

- extendedWaitUntil:
      visible:
          id: 'CategorizeInboxPage.ShowListButton'
      timeout: 10000

- tapOn:
      id: 'CategorizeInboxPage.ShowListButton'

- extendedWaitUntil:
      visible:
          id: 'PageHeader.BackButton'
      timeout: 10000

- waitForAnimationToEnd

- takeScreenshot: scene
