appId: ${APP_ID}
env:
  CATEGORY_NAME: Rules Test Category
  TITLE_CONTAINS_TEXT: Spotify
  COMMENT_CONTAINS_TEXT: Premium
---
- runFlow:
    file: ../setup/setup-rules-test.flow.yaml

- runFlow:
    file: ../subflows/navigate-to-rules.flow.yaml

- tapOn:
    id: 'ActionButton'
- extendedWaitUntil:
    visible:
      id: 'RulesPage.CreateButton'
- waitForAnimationToEnd
- tapOn:
    id: 'RulesPage.CreateButton'
- extendedWaitUntil:
    visible: 'Create Rule'

- tapOn:
    id: 'RuleForm.Condition.0.ValueInput'
- inputText: ${TITLE_CONTAINS_TEXT}

- tapOn:
    id: 'RuleForm.ConditionSection.AddButton'

- tapOn:
    id: 'RuleForm.Condition.1.FieldSelector'

- tapOn: Comment

- tapOn:
    id: 'RuleForm.Condition.1.ValueInput'
- inputText: ${COMMENT_CONTAINS_TEXT}

- tapOn: return

- assertVisible:
    text: 'Match All'

- scrollUntilVisible:
    element:
      id: 'RuleForm.Action.0.CategorySelector'
    direction: DOWN
    centerElement: true

- tapOn:
    id: 'RuleForm.Action.0.CategorySelector'

- runFlow:
    file: ../shared/select-category-by-search.flow.yaml
    env:
      CATEGORY_NAME: ${CATEGORY_NAME}

- tapOn:
    id: 'RuleForm.Footer.SubmitButton'
- extendedWaitUntil:
    visible:
      id: 'RulesPage.Page'

- assertVisible:
    id: 'RulesPage.RuleCard.0'
- assertVisible:
    id: 'RulesPage.RuleCard.0.Conditions'
- assertVisible:
    id: 'RulesPage.RuleCard.0.Actions'
