appId: ${APP_ID}
env:
  ACCOUNT_NAME: Rules Test Account
  CATEGORY_NAME: Rules Test Category
  TAG_NAME: Rules Test Tag
  TITLE_CONTAINS_TEXT: Amazon
---

- runFlow:
    file: ../setup/setup-rules-test.flow.yaml

- runFlow:
    file: ../subflows/navigate-to-rules.flow.yaml

- tapOn:
    id: 'ActionButton'
- extendedWaitUntil:
    visible:
      id: 'RulesPage.CreateButton'
- waitForAnimationToEnd
- tapOn:
    id: 'RulesPage.CreateButton'
- extendedWaitUntil:
    visible: 'Create Rule'

- tapOn:
    id: 'RuleForm.Condition.0.ValueInput'
- inputText: ${TITLE_CONTAINS_TEXT}

- tapOn: return

- tapOn:
    id: 'RuleForm.Action.0.CategorySelector'
- runFlow:
    file: ../shared/select-category-by-search.flow.yaml
    env:
      CATEGORY_NAME: ${CATEGORY_NAME}

- scrollUntilVisible:
    element:
      id: 'RuleForm.ActionSection.AddButton'
    direction: DOWN
- tapOn:
    id: 'RuleForm.ActionSection.AddButton'

- scrollUntilVisible:
    element:
      id: 'RuleForm.Action.1.TypeSelector'
    direction: DOWN
    centerElement: true
- tapOn:
    id: 'RuleForm.Action.1.TypeSelector'
- tapOn:
    id: 'RuleForm.SelectorCard.ADD_TAG'
- swipe:
    start: 50%, 50%
    end: 50%, 90%
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: 'RuleForm.Action.1.TagSelector'
    direction: DOWN
    centerElement: true
- tapOn:
    id: 'RuleForm.Action.1.TagSelector'
- runFlow:
    file: ../shared/select-tag-by-search.flow.yaml
    env:
      TAG_NAME: ${TAG_NAME}

- tapOn:
    id: 'RuleForm.Footer.SubmitButton'
- waitForAnimationToEnd

- assertVisible:
    id: 'RulesPage.RuleCard.0'
- assertVisible:
    id: 'RulesPage.RuleCard.0.Conditions'
- assertVisible:
    id: 'RulesPage.RuleCard.0.Actions'
