appId: ${APP_ID}
env:
  TITLE_CONTAINS_TEXT: Netflix Updated
  CATEGORY_NAME: Rules Test Category
---

- runFlow:
    file: ./02.rules-create-basic.flow.yaml

- tapOn:
    id: 'RulesPage.RuleCard.0'
- extendedWaitUntil:
    visible: 'Edit Rule'

- tapOn:
    id: 'RuleForm.Condition.0.ValueInput'
- eraseText
- inputText: ${TITLE_CONTAINS_TEXT}

- tapOn:
    id: 'RuleForm.Footer.SubmitButton'

- assertVisible:
    id: 'RulesPage.RuleCard.0'
- assertVisible:
    id: 'RulesPage.RuleCard.0.Conditions'
- assertVisible:
    id: 'RulesPage.RuleCard.0.Actions'
