appId: ${APP_ID}
---

- runFlow:
    file: ./02.rules-create-basic.flow.yaml

- assertVisible:
    id: 'RulesPage.RuleCard.0'

- swipe:
    from:
      id: 'RulesPage.RuleCard.0'
    direction: LEFT
    duration: 300

- tapOn:
    id: DeletableRow.DeleteButton

- tapOn: Delete

- assertVisible:
    id: 'RulesPage.EmptyState'
- assertVisible:
    text: 'No Rules Yet'
- assertVisible:
    text: 'Create rules to automatically categorize and tag your bank transactions'