appId: ${APP_ID}
env:
  CATEGORY_NAME: Groceries
  COMMENT_CONTAINS_TEXT: Test08 Comment
  AMOUNT: 100
---

- runFlow:
    file: ../subflows/enter-app.flow.yaml

- runFlow:
    file: ../subflows/navigate-to-rules.flow.yaml

- tapOn:
    id: 'ActionButton'
- extendedWaitUntil:
    visible:
      id: 'RulesPage.CreateButton'
- waitForAnimationToEnd
- tapOn:
    id: 'RulesPage.CreateButton'
- extendedWaitUntil:
    visible: 'Create Rule'

- tapOn:
    id: 'RuleForm.Condition.0.FieldSelector'
- tapOn:
    id: RuleForm.SelectorCard.AMOUNT
- waitForAnimationToEnd

- tapOn:
    id: 'RuleForm.Condition.0.OperatorSelector'
- tapOn:
    id: RuleForm.SelectorCard.GREATER_THAN
- waitForAnimationToEnd

- tapOn:
    id: 'RuleForm.Condition.0.ValueInput'
- inputText: ${AMOUNT}

- tapOn:
    id: 'RuleForm.ConditionSection.AddButton'

- tapOn:
    id: 'RuleForm.Condition.1.FieldSelector'

- tapOn: Comment

- tapOn:
    id: 'RuleForm.Condition.1.ValueInput'
- inputText: ${COMMENT_CONTAINS_TEXT}

- tapOn: return

- scrollUntilVisible:
    element:
      id: 'RuleForm.Action.0.TypeSelector'
    direction: DOWN
    centerElement: true

- tapOn:
    id: RuleForm.Action.0.TypeSelector
- tapOn:
    id: RuleForm.SelectorCard.SET_CATEGORY
- swipe:
    start: 50%, 50%
    end: 50%, 90%

- tapOn:
    id: 'RuleForm.Action.0.CategorySelector'
- runFlow:
    file: ../shared/select-category-by-search.flow.yaml
    env:
      CATEGORY_NAME: ${CATEGORY_NAME}

- tapOn:
    id: 'RuleForm.Footer.SubmitButton'

- assertVisible:
    id: 'RulesPage.RuleCard.0'
- assertVisible:
    id: 'RulesPage.RuleCard.0.Conditions'
- assertVisible:
    id: 'RulesPage.RuleCard.0.Actions'
